# adventofcode

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
2015/01/: solve.sh  solve2.sh
2015/02/: solve.php
2015/03/: solve2.rb
2015/04/: Cargo.toml
2015/05/: solve.js
2015/06/: puzzle.txt  solve2.c
2015/07/: Cargo.toml
2015/08/: Cargo.toml  puzzle.txt
2015/2/: puzzle.txt
2015/3/: solve.rb
2015/4/: Cargo.toml
2015/5/: puzzle.txt  solve.js
2015/6/: solve.c
2015/7/: Cargo.toml
2017/y17day01/: Cargo.toml  puzzle.txt
2017/y17day02/: Cargo.toml
2017/y17day03/: Cargo.toml
2017/y17day04/: Cargo.toml  puzzle.txt
2017/y17day25/: Cargo.toml
2018/1/: .gitignore  Makefile  challenge2.txt  inputToC.sh  solve.sh  solve2.c
2018/10/: .gitignore  Makefile  challenge  solve.F95  solve2.F95
2018/11/: Makefile  challenge  solve.F95
2018/12/: .gitignore  Makefile  challenge  solve.c  solve2.c
2018/13/: Makefile  challenge  solve.c  solve2.c
2018/14/: Makefile  challenge  solve.c  solve2.c
2018/15/: .gitignore  Makefile  challenge  solve.c
2018/16/: challenge
2018/2/: inputToC.sh  solve.sh  solve2.c
2018/3/: challenge.txt  solve.py  solve2.py
2018/4/: solve.py  solve2.py
2018/5/: solve.sh  solve2.sh
2018/6/: .gitignore  Makefile  arraytopgm.rb  solve.F95  solve.rb  solve2.F95
2018/7/: .gitignore  Makefile  challenge  parseToCSV.c  solve.F95  solve.py  solve2.F95
2018/8/: .gitignore  Makefile  challenge  solve.F95  solve2.F95
2018/9/: Makefile  challenge  linkedlist.c  solve.c
2019/1/: puzzle.txt  solve.rb  solve2.rb
(+230 files in other folders)
