[workspace]
members = [
	"crates/*",
	"2015/04",
	"2015/07",
	"2015/08",
	"2019/10",
	"2019/intcode_computer",
	"2020/*",
	"2021/*",
	"2022/*",
	"2023/*",
	"2024/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
debug = true
opt-level = 3 # sometimes 's' might help
# panic = "abort"

[workspace.dependencies]
itertools = "0.13.0"
grid = "0.15.0"
ndarray = "0.16.1"
nalgebra = "0.33.2"
owo-colors = "4.1.0"

aoc-grid = { path = "crates/aoc-grid" }
